--- a/styles/index.css
+++ b/styles/index.css
@@ -69,15 +69,41 @@ html {
 
 .slide_banner{
     display: flex;
-    flex-direction: column;
-    align-items: left;
     justify-content: center;
     width: 100%;
     height: 60rem;
     background-image: url("../img/banner/1920.jpg");
     background-size: 100% 60rem;
+
     & h1{
         font-size: 5rem;
+        line-height: 6rem;
+    }
+
+    & h2{
+        font-size: 1.5rem;
+        margin-top: 4.5rem;
+        margin-bottom: 5rem;
+        font-weight: bold;
+        opacity: 0.8;
+        line-height: 2rem;
+    }
+
+    & .slide__banner__text{
+        display: flex;
+        flex-direction: column;
+        padding: 8rem 0 8rem 0;
+        width: 126rem;
+    }
+
+    & .sub__btn{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 13.5rem;
+        height: 4rem;
+        border-radius: 0.3rem;
+        background-color: var(--hover);
     }
 }
 
