--- a/styles/index.css
+++ b/styles/index.css
@@ -132,10 +132,67 @@ main{
         width: 126rem;
         row-gap: 10rem;
 
-        .feature{
+        & .feature{
+            position: relative;
             display: flex;
             flex-direction: column;
             gap: 2rem;
+
+            & .feature__img{
+
+             
+
+                & .feature__img__sub{
+                    left: 5rem;
+                    bottom: 14rem;
+                    color: rgba(0, 0, 0, 0.7);
+                    opacity: 0.8;
+                    position: absolute;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    font-size: 2rem;
+                    font-weight: bold;
+                    width: 25rem;
+                    height: 5rem;
+                    border-radius: 0.3rem;
+                    background-color: #dfdbd0;
+                }
+
+                & .feature__img__price{
+                    color: rgba(0, 0, 0, 0.7);
+                    opacity: 0.9;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    padding-left: 3rem;
+                    position: absolute;
+                    left: 5rem;
+                    bottom: 14rem;
+                    font-size: 2rem;
+                    width: 26rem;
+                    height: 22rem;
+                    border-radius: 0.3rem;
+                    background-color: #dfdbd0;
+                    gap: 2rem;
+
+                    & .emphasize{
+                        color: brown;
+                    }
+
+                    & .dcprice{
+                        padding: 1.5rem 0;
+                        width: 88%;
+                        border-top: 0.2rem solid rgba(0, 0, 0, 0.2);
+                        border-bottom: 0.2rem solid rgba(0, 0, 0, 0.2);
+                        display: flex;
+                        gap: 2rem;
+                        flex-direction: column;
+                    }
+                }
+            }
+
+            
         }
     }
 }
