--- a/styles/reset.css
+++ b/styles/reset.css
@@ -23,6 +23,14 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
+a:link{
+	text-decoration: none;
+}
+
+a:visited,a:active{
+	color: black;
+}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
