--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,7 @@
 }
 
 html {
-    font-family: "Nanum Pen Script", cursive;
+    font-family: 'Noto Sans KR', AppleSDGothic, 'apple sd gothic neo', MalgunGothic, 'HY Dotum', 'Lexi Gulim', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 10px;  /* 1rem = 10px  */
