--- a/styles/board.css
+++ b/styles/board.css
@@ -13,11 +13,11 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap:5rem;
 
     h1{
         font-size: 3rem;
-        margin-top: 5rem;
+        margin-top: 2rem;
+        margin-bottom: 5rem;
     }
 
     & .board{
@@ -25,6 +25,7 @@ main{
         width: 126rem;
         display: grid;
         grid-template-rows: repeat(11, 1fr);
+        margin-bottom: 1rem;
 
         & .board__row{
             display: grid;
@@ -55,5 +56,60 @@ main{
             border-top: solid 0.2rem #c6bfb9;
         }
 
+    }
+
+    & .board__btns{
+        width: 126rem;
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 1rem;
+
+        & .board__sortbtns{
+            display: flex;
+            gap: 1rem;
+        }
+
+        & .btn{
+            font-size: 1.5rem;
+            font-weight: bold;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #c5875e;
+            width: 7rem;
+            height: 4rem;
+            border-radius: 1rem;
+        }
+    }
+
+    & .board__pagination{
+        gap: 2rem;
+        font-size: 2rem;
+        font-weight: bold;
+        width: 126rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        & .active{
+            color:#be8964 ;            
+        }
+
+        & .pagination{
+            color: #978c87;
+        }
+
+
+        & .prev, .next{
+            font-size: 2rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            width: 3rem;
+            height: 3rem;
+            background-color: #c5875e;
+            border-radius: 3rem;
+        }
     }
 }
