--- a/styles/board.css
+++ b/styles/board.css
@@ -1,13 +1,5 @@
-:root{
-    --hover : #8e755e;
-}
 
-html {
-    font-family: 'Noto Sans KR', AppleSDGothic, 'apple sd gothic neo', MalgunGothic, 'HY Dotum', 'Lexi Gulim', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 10px;  /* 1rem = 10px  */
-}
+
 
 main{
     display: flex;
@@ -173,21 +165,49 @@ footer{
             font-size: 1rem;
             width: 44.5rem;
 
-            & .bheader{
-                display: none;
-            }
-
             & .board__row{
                 grid-template-rows: repeat(2, 1fr);
-                grid-template-columns: 10% 80% 10%;
+                grid-template-columns: 10% 70% 10% 10%;
+
+                & .boardcell__writer{
+                    grid-column: span 2;
+                }
+
+                & .boardcell__title{
+                    grid-row : span 2;
+                }
             }
-    
         }
 
         .board:nth-child(2){
             border-top: solid 0.2rem rgba(198, 191, 185, 0.2);
         }
+
+        .board__btns{
+            width: 44.5rem;
+
+            & .btn{
+                font-size: 1rem;
+                width: 5rem;
+                height: 2.5rem;
+            }
+        }
+
+        .board__pagination{
+            font-size: 1.5rem;
+
+            & .prev, .next{
+                font-size: 1.5rem;
+                width: 2.5rem;
+                height: 2.5rem;
+            }
+        }
         
+        .board__searchbar{
+            width: 90rem;
+            height: 3rem;
+            font-size: 1rem;
+        }
 
 
 
