read.html start

--- a/styles/read.css
+++ b/styles/read.css
@@ -14,57 +14,102 @@ main{
         h1{
             font-weight: bold;
             font-size: 3rem;
-            margin-top: 2rem;
+            margin-top: 3rem;
         }
 
-        & .write__title, .write__upload, .read__desc, .write__textarea, .write__btns{
+        & .read__desc, .read__textarea, .write__btns, .read__reply{
             width: 80rem;
         }
 
-        & .write__title, .write__textarea{
+        & .read__textarea{
             font-size: 2rem;
-            border: solid 0.2rem #c6bfb9;
+            border: none;
+            height: 50rem;
             outline: none;
-        }
+            display: flex;
+            flex-direction: column;
+            gap: 3rem;
 
-        & .write__title:hover{
-            border: solid 0.2rem #c5875e;
-        }
-
-        & .write__textarea:hover{
-            border: solid 0.2rem #c5875e;
+            & .read__img{
+                align-self: center;
+            }
         }
 
         & .read__desc{
             display: flex;
             gap: 1.5rem;
+            padding-bottom: 2.5rem;
+            border-bottom: solid 0.2rem #c6bfb9;
 
             & .desc__writer{
                 font-weight: bold;
             }
-        }
 
-        & .write__title{
-            height: 4rem;
-        }
-
-        & .write__upload{
-
-            & .upload__file{
-                display: none;
+            & .desc__date{
+                color: #c6bfb9;
             }
         }
 
-        & .write__textarea{
-            height: 50rem;
-            resize: none;
+        & .read__reply{
+            margin-top: 1rem;
+  
+
+            & .reply__cnt{
+                margin-bottom: 4rem;
+            }
+
+            & .reply__write{
+                padding-bottom: 1rem;
+                border-bottom: solid 0.2rem rgba(198, 191, 185, 0.2);
+                gap: 1rem;
+
+                & .reply__write__writer{
+                    display: block;
+                    font-weight: bold;
+                    margin-bottom: 1.5rem;
+                }
+
+                & .reply__write__inputbox{
+                    padding: 0 2rem;
+                    height: 6rem;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    border: solid 0.1rem black;
+                    border-radius: 0.5rem;
+
+
+                    & .inputbox__textarea{
+                        width: 65rem;
+                        border: none;
+                        outline: none;
+                        resize: none;
+                    }
+
+                    & .inputbox__btn{
+                        color: white;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        width: 5.5rem;
+                        height: 4rem;
+                        background-color: #5e504d;
+                        border-radius: 0.5rem;
+                    }
+                }
+
+                & .reply__write__inputbox:hover{
+                    border: solid 0.1rem #c5875e;
+                }
+            }
         }
 
-        & .write__btns{
+
+        & .read__btns{
             display: flex;
             gap: 1.5rem;
     
-            & .write__btn{
+            & .read__btn{
                 font-size: 1.5rem;
                 font-weight: bold;
                 display: flex;
