--- a/styles/read.css
+++ b/styles/read.css
@@ -59,6 +59,7 @@ main{
             }
 
             & .reply__write{
+                margin-bottom: 1.5rem;
                 padding-bottom: 1rem;
                 border-bottom: solid 0.2rem rgba(198, 191, 185, 0.2);
                 gap: 1rem;
@@ -102,6 +103,78 @@ main{
                     border: solid 0.1rem #c5875e;
                 }
             }
+
+            & .replies{
+                display: flex;
+                flex-direction: column;
+
+
+                & .reply{
+                display: flex;
+                flex-direction: column;
+                gap: 1.5rem;
+                border-bottom: solid 0.2rem rgba(198, 191, 185, 0.2);
+                margin-bottom: 1.5rem;
+                padding-bottom: 1rem;
+                
+                & .reply__header{
+                    display: flex;
+                    justify-content: space-between;
+
+                    & .reply__writer{
+                        font-weight: bold;
+                    }
+
+                    & .reply__rightsection{
+                        display: flex;
+                        gap: 1rem;
+                    }
+            }
+                    & .reply__content{
+                        color: #a49990;
+                    }
+
+                    & .nested__reply{
+                        background-color: #f4f1ec;
+                        display: flex;
+                        flex-direction: column;
+                        gap: 1.5rem;
+                        border: solid 0.2rem rgba(198, 191, 185, 0.2);
+                        margin-bottom: 1.5rem;
+                        padding: 1rem;
+                        align-self: flex-end;
+                        width: 95%;
+                    }
+                }
+
+                & .reply:last-child{
+                    border-bottom: none;
+                }
+            }
+        }
+
+        & .read__navi{
+            font-size: 1.3rem;
+            padding: 3rem 0;
+            border-top: solid 0.2rem #c6bfb9;
+            border-bottom: solid 0.2rem #c6bfb9;
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+
+            & .navi__next, .navi__prev{
+                display: flex;
+                justify-content: space-between;
+
+                & .navi__title:hover{
+                    color: #c5875e;
+                }
+
+                & .navi__left{
+                    display: flex;
+                    gap: 1rem;
+                }
+            }
         }
 
 
@@ -143,11 +216,15 @@ footer{
 @media screen and (max-width:945px) {
 
     main{
-        & .board__write{
+        & .board__read{
             width: 44.5rem;
 
-            & .write__title, .write__upload, .write__desc, .write__textarea, .write__btns{
+            & .read__desc, .read__textarea, .write__btns, .read__reply{
                 width: 44.5rem;
+            }
+            & .inputbox__textarea{
+                width: 10rem;
+   
             }
         }
 
