--- a/styles/read.css
+++ b/styles/read.css
@@ -81,6 +81,7 @@ main{
 
 
                     & .inputbox__textarea{
+                        display: block;
                         width: 65rem;
                         border: none;
                         outline: none;
@@ -140,7 +141,6 @@ main{
                         flex-direction: column;
                         gap: 1.5rem;
                         border: solid 0.2rem rgba(198, 191, 185, 0.2);
-                        margin-bottom: 1.5rem;
                         padding: 1rem;
                         align-self: flex-end;
                         width: 95%;
@@ -222,9 +222,12 @@ footer{
             & .read__desc, .read__textarea, .write__btns, .read__reply{
                 width: 44.5rem;
             }
-            & .inputbox__textarea{
-                width: 10rem;
-   
+
+
+
+            & .inputbox__btn{
+                font-size: 1.2rem;
+                
             }
         }
 
